--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .header {
-    background-image: url('./img/back.jpg');
+    background-image: url('./img/back.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
